New features & bugfixes & refactor
