# backend/src/models/relationship.model.ts
@@ -1,13 +1,0 @@
-export = (sequelize: any, Sequelize: any) => {
-  return sequelize.define("relationships", {
-    person1Id: {
-      type: Sequelize.INTEGER
-    },
-    person2Id: {
-      type: Sequelize.INTEGER
-    },
-    type: {
-      type: Sequelize.ENUM('sibling', 'parent', 'child', 'spouse')
-    }
-  });
-}
